Bug fixes and minor cleanup